--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-center" style="max-width:1500px">
-  <img class="w3-image" src="https://www.w3schools.com//w3images/photographer.jpg" alt="Me" width="1500" height="600">
+  <img class="w3-image" src="https://www.w3schools.com/w3images/photographer.jpg" alt="Me" width="1500" height="600">
   <div class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-light-grey w3-center">
     <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">JANE DOE</h1>
     <h5 class="w3-hide-large" style="white-space:nowrap">JANE DOE</h5>
@@ -39,8 +39,8 @@
   <img src="https://www.w3schools.com/w3images/ocean.jpg" alt="Ocean" class="w3-image" width="1000" height="500">
   <img src="https://www.w3schools.com/w3images/ocean2.jpg" alt="Ocean II" class="w3-image w3-margin-top" width="1000" height="500">
   <img src="https://www.w3schools.com/w3images/falls2.jpg" alt="Falls" class="w3-image w3-margin-top" width="1000" height="500">
-  <img src="https://www.w3schools.com//w3images/mountainskies.jpg" alt="Skies" class="w3-image w3-margin-top" width="1000" height="500">
-  <img src="https://www.w3schools.com//w3images/mountains2.jpg" alt="Mountains" class="w3-image w3-margin-top" width="1000" height="500">
+  <img src="https://www.w3schools.com/w3images/mountainskies.jpg" alt="Skies" class="w3-image w3-margin-top" width="1000" height="500">
+  <img src="https://www.w3schools.com/w3images/mountains2.jpg" alt="Mountains" class="w3-image w3-margin-top" width="1000" height="500">
 
   <!-- Contact -->
   <div class="w3-light-grey w3-padding-large w3-padding-32 w3-margin-top" id="contact">
