--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
 <body>
   
 <style>
-  video-container { position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden; }
-
-.video-container iframe, .video-container object, .video-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; 
-</style>
+.video-responsive{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
+.video-responsive iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
+ </style> 
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-center" style="max-width:1500px">
@@ -47,7 +57,7 @@
   <img src="https://www.w3schools.com/w3images/falls2.jpg" alt="Falls" class="w3-image w3-margin-top" width="1000" height="500">
   <img src="https://www.w3schools.com/w3images/mountainskies.jpg" alt="Skies" class="w3-image w3-margin-top" width="1000" height="500">
   <img src="https://www.w3schools.com/w3images/mountains2.jpg" alt="Mountains" class="w3-image w3-margin-top" width="1000" height="500">
-  <div class="embed-container">
+  <div class="video-responsive">
   <iframe src="https://www.youtube.com/embed/lQCo6FbH2PY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   
