--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
 <!-- Header -->
-<header class="w3-display-container w3-content w3-center" style="max-width:1500px">
+<header class="w3-display-container w3-content w3-center" style="max-width:100%">
   <img class="w3-image" src="https://www.w3schools.com/w3images/photographer.jpg" alt="Me" width="100%" height="600">
   <div class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-light-grey w3-center">
     <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">JANE DOE</h1>
