--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <body>
 
 <!-- Header -->
-<header class="w3-display-container w3-content w3-center" style="max-width:100%" "max-height:450">
-  <img class="w3-image" src="https://images.pexels.com/photos/403495/pexels-photo-403495.jpeg" alt="Me" width="100%">
+<header class="w3-display-container w3-content w3-center" style="max-width:100%">
+  <img class="w3-image" src="https://images.pexels.com/photos/403495/pexels-photo-403495.jpeg" alt="Me" width="100%" height="250">
   <div class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-light-grey w3-center">
     <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">Matt Applegate</h1>
     <h5 class="w3-hide-large" style="white-space:nowrap">Matt Applegate</h5>
