--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   
   <style>
-.video-responsive{
+.video-responsive {
     overflow:hidden;
     padding-bottom:56.25%;
     position:relative;
     height:0;
 }
-.video-responsive iframe{
+.video-responsive iframe 
     left:0;
     top:0;
     height:100%;
@@ -20,6 +20,7 @@
     position:absolute;
 }
  </style> 
+  
 <body>
 
 <!-- Header -->
@@ -58,7 +59,9 @@
   <img src="https://www.w3schools.com/w3images/mountains2.jpg" alt="Mountains" class="w3-image w3-margin-top" width="1000" height="500">
   <br>
   <br>
+  <div class="video-responsive">
   <iframe src="https://www.youtube.com/embed/lQCo6FbH2PY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
   
   <!-- Contact -->
   <div class="w3-light-grey w3-padding-large w3-padding-32 w3-margin-top" id="contact">
