--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   
-  <style>
+<style>
 .video-responsive {
     overflow:hidden;
     padding-bottom:56.25%;
     position:relative;
     height:0;
 }
-.video-responsive iframe 
+.video-responsive iframe {
     left:0;
     top:0;
     height:100%;
     width:100%;
     position:absolute;
 }
- </style> 
+  </style> 
   
 <body>
 
