--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
   <br>
   <div class="video-responsive">
   <iframe src="https://www.youtube.com/embed/lQCo6FbH2PY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+  <div class="video-responsive">
   <iframe src="https://www.youtube.com/embed/U6JLGfBGDq8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   
