--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <hr>
     <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus.</p>
     <center><p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p></center>
-    <center><a href="#"><i class="fa fa-instagram"></i></a></center>
+    <center><a href="#"><i class="fa fa-instagram" style="font-size:48px;"></i></a></center>
 
   </div>
 
