--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
 <style>
-background-color:#FF5733;
+body {
+  background-color: #FF5733;
+}
+
   
 .video-responsive {
     overflow:hidden;
