--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 body {
   background-color: #white;
 }
+ 
+.float-container {
+    border: 3px solid #fff;
+    padding: 20px;
+}
+
+.float-child {
+    width: 50%;
+    float: left;
+    padding: 20px;
+    border: 2px solid red;
+}  
   
 .video-responsive {
     overflow:hidden;
@@ -79,11 +91,14 @@ body {
     <h3 class="w3-center">Contact</h3>
     <hr>
     <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus.</p>
-    <ul>
-    <center><a href="#"><i class="fa fa-instagram" style="font-size:24px;"></i></a></center>
-    <center><a href="#"><i class="fa fa-youtube" style="font-size:24px;"></i></a></center>
+    <div class="float-container">
+    <div class="float-child">
+    <center><div class="green"><a href="#"><i class="fa fa-instagram" style="font-size:24px;"></i></a></div></center>
+      </div>
+    <center><div class="blue"><a href="#"><i class="fa fa-youtube" style="font-size:24px;"></i></a></div></center>
+    </div>
+  </div>
     <center><p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p></center>
-    </ul>
   </div>
 
 <!-- End page content -->
