--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@ body {
     <div class="float-child">
     <center><div class="green"><a href="#"><i class="fa fa-instagram" style="font-size:24px;"></i></a></div></center>
       </div>
+      <div class="float-child">
     <center><div class="blue"><a href="#"><i class="fa fa-youtube" style="font-size:24px;"></i></a></div></center>
     </div>
   </div>
