--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body {
     width: 50%;
     float: left;
     padding: 20px;
-    border: 2px solid red;
+    border: 2px solid #fff;
 }  
   
 .video-responsive {
@@ -90,9 +90,11 @@ body {
     <h3 class="w3-center">Contact</h3>
     <hr>
     <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus.</p>
-    <div class="float-container">
+    
+      <div class="float-child">
     <center><div class="green"><a href="#"><i class="fa fa-instagram" style="font-size:24px;"></i></a></div></center>
       </div>
+      <div class="float-child">
     <center><div class="blue"><a href="#"><i class="fa fa-youtube" style="font-size:24px;"></i></a></div></center>
     </div>
   </div>
